--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
         </configuration>
         <executions>
           <execution>
-            <phase>compile</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>execute</goal>
             </goals>
