--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,8 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.1.118</version>
+      <version>1.2.124</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
