--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,13 @@
       <plugin>
         <groupId>org.seasar.dbflute</groupId>
         <artifactId>maven-dbflute-plugin</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.3.0</version>
         <configuration>
           <dbfluteVersion>0.9.6</dbfluteVersion>
           <rootPackage>org.seasar.robot</rootPackage>
           <dbPackage>org.seasar.robot.db</dbPackage>
           <schemaName>robot</schemaName>
-          <schemaFile>${basedir}/dbflute/schema/project-schema-robot.xml</schemaFile>
+          <schemaFile>${basedir}/dbflute_robot/schema/project-schema-robot.xml</schemaFile>
           <databaseUrl>jdbc:h2:file:${basedir}/target/db/robot</databaseUrl>
         </configuration>
       </plugin>
