--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.0-SNAPSHOT</version>
+          <version>2.3</version>
           <executions>
             <execution>
               <goals>
