--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.seasar.robot</groupId>
   <artifactId>s2-robot-db-mysql</artifactId>
   <packaging>jar</packaging>
-  <version>0.3.0-SNAPSHOT</version>
+  <version>0.3.0</version>
   <name>s2-robot-db-mysql</name>
   <build>
     <pluginManagement>
@@ -26,7 +26,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.0-SNAPSHOT</version>
+          <version>2.3</version>
           <executions>
             <execution>
               <goals>
