--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,7 @@
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <version>0.5-20091008</version>
+      <version>0.7</version>
     </dependency>
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
