--- a/s2robot/pom.xml
+++ b/s2robot/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.seasar.robot</groupId>
     <artifactId>s2-robot-parent</artifactId>
-    <version>0.7.2</version>
+    <version>0.7.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <build>
